# mocked

./: .gitignore  Cargo.toml  LICENSE  README.md  config-new.yaml  config.yaml  mocked.yml  package.json  pre-install.js  start.js  uninstall.js
.github/workflows/: build.yaml  deploy.yaml  publish.yml  release.yaml  release.yml
examples/: config.yaml  resp.json
npm/: package.json.tmpl
npm/fauxd/: package.json  tsconfig.json
npm/fauxd/src/: index.ts
npm/mockd/: package-lock.json  package.json
npm/mockd/src/: index.ts
src/: cli.rs  condition.rs  init.rs  main.rs  match.rs  matcher.rs  matchers.rs  request.rs  response.rs  rule.rs  rules.rs  start.rs
src/routing/: body.rs  condition.rs  config.rs  match.rs  matcher.rs  matchers.rs  method.rs  mod.rs  options.rs  response.rs  route.rs  rule.rs  value.rs
