[package]
name = "mocked"
version = "0.3.1"
edition = "2021"
license-file = "LICENSE"
description = "Your friendly HTTP mock response server"
repository = "https://github.com/herzrasen/mocked.git"
readme = "README.md"

[dependencies]
axum = "0.8.1"
axum-test = "17.2.0"
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tempfile = "3.18.0"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
rand = "0.9.0"
