[package]
name = "mocked"
version = "0.4.0"
edition = "2021"
license-file = "LICENSE"
description = "Your friendly HTTP mock response server"
repository = "https://github.com/herzrasen/mocked.git"
readme = "README.md"

[dependencies]
axum = "0.8.4"
axum-test = "17.3.0"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
rand = "0.9.2"
